--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
 
     <section class="hero">
-        <h1>Hi, I’m Mykhailo</h1>
+        <h1>Hi, I am Mykhailo</h1>
         <p>Welcome to my portfolio website</p>
     </section>
 
