edited contact page

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Contact Me</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -16,9 +16,9 @@
         </ul>
     </nav>
 
-    <section class="projects">
-        <h2>My Projects</h2>
-        <p>Projects will be displayed here.</p>
+    <section class="contact">
+        <h2>Contact Me</h2>
+        <p>Form and social links will go here.</p>
     </section>
 
     <script src="js/script.js"></script>
