made contain for index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
     </nav>
 
     <section class="hero">
-        <h1>Hi, I am Mykhailo</h1>
-        <p>Welcome to my portfolio website</p>
+        <div class="hero-content">
+            <h1>Hi, I'm Mykhailo</h1>
+            <p>Final-year IT Management & Cybersecurity student at Munster Technological University, Cork.</p>
+            <p>Passionate about technology, learning, and creating impactful projects.</p>
+        </div>
     </section>
 
     <script src="js/script.js"></script>
