about me page, boxes for better vision, interactive icons of tools i use in my study

--- a/about.html
+++ b/about.html
@@ -33,20 +33,80 @@
             </div>
 
             <!-- Box 2: Tools -->
-            <div class="box" data-aos="fade-up" data-aos-delay="100">
-                <h3>Tools I Use</h3>
-                <div class="icons">
-                    <img src="images/html.png" alt="HTML">
-                    <img src="images/css.png" alt="CSS">
-                    <img src="images/js.png" alt="JavaScript">
-                    <img src="images/github.png" alt="GitHub">
-                </div>
-            </div>
+<div class="box" data-aos="fade-up" data-aos-delay="100">
+    <h3>Tools I Use</h3>
+    <div class="icons-grid">
+        <div class="icon-item">
+            <img src="images/html.png" alt="HTML">
+            <span>HTML</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/css.png" alt="CSS">
+            <span>CSS</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/js.png" alt="JavaScript">
+            <span>JavaScript</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/github.png" alt="GitHub">
+            <span>GitHub</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/linux.png" alt="Linux">
+            <span>Linux</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/windows.png" alt="Windows">
+            <span>Windows</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/powershell.png" alt="PowerShell">
+            <span>PowerShell</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/microsoft365.png" alt="Microsoft 365">
+            <span>Microsoft 365</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/wireshark.png" alt="Wireshark">
+            <span>Wireshark</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/cisco.png" alt="Cisco">
+            <span>Cisco</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/putty.png" alt="PuTTY">
+            <span>PuTTY</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/servicenow.png" alt="ServiceNow">
+            <span>ServiceNow</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/vmware.png" alt="VMware">
+            <span>VMware</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/python.png" alt="Python">
+            <span>Python</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/sql.png" alt="SQL">
+            <span>SQL</span>
+        </div>
+        <div class="icon-item">
+            <img src="images/visual-paradigm.png" alt="Visual Paradigm">
+            <span>Visual Paradigm</span>
+        </div>
+    </div>
+</div>
 
             <!-- Box 3: Projects -->
             <div class="box" data-aos="fade-up" data-aos-delay="200">
                 <h3>Projects</h3>
-                <p>I’ve worked on several projects. <a href="projects.html">See them here</a>.</p>
+                <p>I have worked on several projects. <a href="projects.html">See them here</a>.</p>
             </div>
         </div>
     </section>
