updated about page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,24 @@
             <!-- Box 1: What I Study -->
             <div class="box" data-aos="fade-up">
                 <h3>What I Study</h3>
-                <p>IT Management, Cybersecurity, Networking, Cloud Computing</p>
+                <ul class="study-list">
+                    <li>
+                        <span class="icon">💻</span>
+                        IT support & troubleshooting (Windows/Linux, Microsoft 365)
+                    </li>
+                    <li>
+                        <span class="icon">🖥️</span>
+                        System administration & virtualisation (VMware, Active Directory)
+                    </li>
+                    <li>
+                        <span class="icon">🔒</span>
+                        Cybersecurity fundamentals (firewalls, networking, security policies)
+                    </li>
+                    <li>
+                        <span class="icon">⚙️</span>
+                        Automation & scripting (Python, PowerShell, GitHub)
+                    </li>
+                </ul>
             </div>
 
             <!-- Box 2: Tools -->
