updated projects and contact pages

--- a/about.html
+++ b/about.html
@@ -117,6 +117,10 @@
             <img src="images/visual-paradigm.png" alt="Visual Paradigm">
             <span>Visual Paradigm</span>
         </div>
+        <div class="icon-item">
+            <img src="images/pdf.png" alt="Technical Documentation">
+            <span>Technical Documentation</span>
+        </div>
     </div>
 </div>
 
